--- a/Watchlist.html
+++ b/Watchlist.html
@@ -271,7 +271,7 @@
           </div>
  -->
 
-        <div class="movie-item">
+        <!--  <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://www.themoviedb.org/t/p/original/iLWsLVrfkFvOXOG9PbUAYg7AK3E.jpg"
@@ -456,114 +456,6 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://www.themoviedb.org/t/p/original/bdN3gXuIZYaJP7ftKK2sU0nPtEA.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">The Prestige</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">2006</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/64NKasFKx6aOTKRg4mv76l0IwZR.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">National Lampoon's Christmas Vacation</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1989</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/7QPeVsr9rcFU9Gl90yg0gTOTpVv.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Love Actually</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">2003</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
               src="https://www.themoviedb.org/t/p/original/xrXUADqC2gt84BPYzNtXxAJEfbo.jpg"
               class="movie-poster"
             />
@@ -595,79 +487,7 @@
               </a>
             </div>
           </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/qLzpA23AsOTmNSKsEdPJi0atWcP.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">The Santa Clause</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1994</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/x9pXrMKLsBGGOFyyZ0Gwt9YpVub.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Enemy of the State</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1998</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
+        </div> -->
 
         <div class="movie-item">
           <div class="movie-content">
@@ -744,42 +564,6 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://www.themoviedb.org/t/p/original/cT5wdyo8kT7dycqjrolJ2sHWkFx.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Species</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1995</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
               src="https://www.themoviedb.org/t/p/original/5IMr0L4BoONvN5i9kyVd0zGww3L.jpg"
               class="movie-poster"
             />
@@ -791,78 +575,6 @@
                 >
               </div>
               <span class="movie-year-text">1998</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/2xySnsL9R9wjTvZBc8PEwZlu0Vq.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Outbreak</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1995</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/cRp5XzTdXs2BdvL4MF19HPP831z.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Cube</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1997</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -1007,42 +719,6 @@
                 >
               </div>
               <span class="movie-year-text">1994</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/5F5EY6gkHDY5xtMDNFCnhKsNPEs.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Ghost Dog: The Way of the Samurai</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1999</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
